Auto stash before merge of "master" and "origin/master"

--- a/tp/gmm/Practice for first hands on GMM.ipynb
+++ b/tp/gmm/Practice for first hands on GMM.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Practice: Un-supervised classification with a Gaussian Mixture Model\n",
     "G. Maze, Ifremer / LOPS\n",
@@ -15,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -26,7 +31,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Generate a dummy bi-dimensional dataset $D(x_1,x_2)$\n",
     "We manually create a mixture of 3 bi-dimensional normal distributions\n",
@@ -40,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -79,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -113,7 +125,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Compute and plot the observed density $p([x_1,x_2])$ of the bi-dimensional dataset\n",
     "\n",
@@ -125,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -167,7 +184,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Compute and plot marginal densities $p(x_1)$ and $p(x_2)$ of the dataset"
    ]
@@ -175,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -219,7 +241,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Compute and plot a conditional density $p(x_1|x_2)$ of the dataset"
    ]
@@ -227,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -290,7 +317,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Fit a GMM to the dummy dataset"
    ]
@@ -299,7 +329,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -310,7 +342,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -372,7 +406,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Once the GMM is fitted, one can predict classes"
    ]
@@ -381,6 +418,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -432,7 +470,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Visualise clustering results"
    ]
@@ -441,7 +482,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -539,7 +582,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -572,7 +617,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -602,7 +649,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Classify new data"
    ]
@@ -610,7 +660,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -643,6 +695,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -743,14 +796,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# More exercices on GMM"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Compare the GMM and the observed P(x), P(x1), P(x2), P(x1|x2), P(x2|x1)\n",
     "\n",
@@ -763,7 +822,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Determine the optimal number of classes using the BIC\n",
     "The BIC is directly implemented within scikit learn class method:\n",
@@ -775,7 +837,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Test different shapes for the co-variance matrix\n",
     "Using the gmm option: \n",
@@ -785,7 +850,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Change the number of sample in each of the imposed clusters\n",
     "\n",
@@ -793,6 +861,85 @@
     "\n",
     "- what happens if all clusters have the same number of points ?\n",
     "- what happens if 1 cluster has much more points than all the others ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.Dataset>\n",
+      "Dimensions:           (lat: 1600, lon: 3600, time: 1)\n",
+      "Coordinates:\n",
+      "  * time              (time) datetime64[ns] 2010-08-30\n",
+      "  * lat               (lat) float32 -79.95 -79.85 -79.75 -79.65 -79.55 ...\n",
+      "  * lon               (lon) float32 -179.95 -179.85 -179.75 -179.65 -179.55 ...\n",
+      "Data variables:\n",
+      "    analysed_sst      (time, lat, lon) float64 ...\n",
+      "    analysis_error    (time, lat, lon) float64 ...\n",
+      "    mask              (time, lat, lon) float64 ...\n",
+      "    sea_ice_fraction  (time, lat, lon) float64 ...\n",
+      "Attributes:\n",
+      "    CONVENTIONS:                CF-1.4\n",
+      "    title:                      Global Odyssea Sea Surface Temperature Analysis\n",
+      "    summary:                    Multisensor optimal interpolation of sea surf...\n",
+      "    id:                         IFR-L4-SSTfnd-ODYSSEA-GLOB_010\n",
+      "    references:                 Piolle J. F., Autret E., Arino O., Robinson I...\n",
+      "    institution:                Ifremer\n",
+      "    license:                    MyOcean data use is free and open. Users must...\n",
+      "    naming_authority:           org.ghrsst\n",
+      "    uuid:                       \n",
+      "    contact:                    jean.francois.piolle@ifremer.fr;emmanuelle.au...\n",
+      "    gds_version_id:             2.0\n",
+      "    product_version:             1.0\n",
+      "    netcdf_version_id:          \"3.6.2\" of Apr  5 2008 23:39:54 $\n",
+      "    date_created:               20101209T233337Z\n",
+      "    history:                    analysis originally produced by Ifremer/Cersa...\n",
+      "    platform:                   METOP-A;NOAA18;NOAA19;AQUA;ENVISAT;NOAA19;TRM...\n",
+      "    sensor:                     AVHRR;AVHRR;AVHRR;MODIS_A;AATSR;AVHRR;TMI;AMS...\n",
+      "    source_data:                EUR_L2P_AVHRR_METOP_A;NAVO-L2P-AVHRR18_L;NAVO...\n",
+      "    processing_level:           L4\n",
+      "    cdm_data_type:              grid\n",
+      "    spatial_resolution:          0.1 degree\n",
+      "    temporal_resolution:        daily\n",
+      "    start_time:                 20100829T120000Z\n",
+      "    stop_time:                  20100830T120000Z\n",
+      "    southernmost_latitude:      -80.0\n",
+      "    northernmost_latitude:      80.0\n",
+      "    westernmost_longitude:      -180.0\n",
+      "    easternmost_longitude:      180.0\n",
+      "    geospatial_lat_units:       degrees_north\n",
+      "    geospatial_lat_resolution:  0.1\n",
+      "    geospatial_lon_units:       degrees_east\n",
+      "    geospatial_lon_resolution:  0.1\n",
+      "    file_quality_level:         3\n",
+      "    metadata_conventions:       Unidata Observation Dataset v1.0\n",
+      "    metadata_link:              \n",
+      "    keywords:                   Oceans > Ocean Temperature > Sea Surface Temp...\n",
+      "    keywords_vocabulary:        NASA Global Change Master Directory (GCMD) Sc...\n",
+      "    standard_name_vocabulary:   NetCDF Climate and Forecast (CF) Metadata Con...\n",
+      "    acknowledgment:             Please aknowledge the use of these data with ...\n",
+      "    creator_name:               Jean-Francois Piolle\n",
+      "    creator_email:              jfpiolle@ifremer.fr\n",
+      "    creator_url:                http://cersat.ifremer.fr\n",
+      "    project:                    Cersat\n",
+      "    publisher_name:             Ifremer/Cersat\n",
+      "    publisher_url:              http://cersat.ifremer.fr\n",
+      "    publisher_email:            fpaf@ifremer.fr\n",
+      "    comment:                    WARNING:Some applications are unable to prope...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xarray as xr\n",
+    "ds = xr.open_dataset('http://www.ifremer.fr/opendap/cerdap1/ghrsst/l4/glob/odyssea-nrt/data/2010/242/20100830-IFR-L4_GHRSST-SSTfnd-ODYSSEA-GLOB_010-v2.0-fv1.0.nc')\n",
+    "print ds"
    ]
   }
  ],
